# neo-conversion-tool

./: CMakeLists.txt  README.md  shell.html
src/: emscriptenstuff.cpp  emscriptenstuff.h  main.cpp  settings.h  stringutil.h  viewhtml.cpp  viewhtml.h
